Add "" as a unit

--- a/message_ix_models/data/transport/set.yaml
+++ b/message_ix_models/data/transport/set.yaml
@@ -104,6 +104,9 @@ time:
 
 unit:
   add:
+    # TODO move this one upstream
+    "": dimensionless
+
     km: kilometre
     t km: tonne kilometre (freight transport)
     Gv km: 10⁹ vehicle kilometre
