Fix check of already-loaded config in transport…read_config()

--- a/message_ix_models/data/transport/R11/config.yaml
+++ b/message_ix_models/data/transport/R11/config.yaml
@@ -1,5 +1,7 @@
 # Configuration for MESSAGEix-Transport
 
+regions: R11
+
 # Sources for input data
 data source:
   # Non-LDV technologies: 'IKARUS' or null
