Set report/filter to false in transport reporting config

--- a/message_ix_models/data/transport/R11/config.yaml
+++ b/message_ix_models/data/transport/R11/config.yaml
@@ -219,4 +219,4 @@ share weight convergence:
 report:
   # Set 'true' to include only technologies with "transport" in the name, e.g.
   # if full-resolution reporting of ACT leads to memory issues
-  filter: true
+  filter: false
