Test and debug "mix-models transport gen-demand"

--- a/message_ix_models/data/transport/R11/config.yaml
+++ b/message_ix_models/data/transport/R11/config.yaml
@@ -12,6 +12,8 @@ data source:
   demand dummy: false
   # Population: 'GEA mix' only
   population: GEA mix
+  #  GDP
+  gdp: GEA mix
   # Emissions: ID of a dump from a base scenario
   emissions: "1"
 
