--- a/message_ix_models/data/transport/R14/config.yaml
+++ b/message_ix_models/data/transport/R14/config.yaml
@@ -11,6 +11,7 @@ data source:
   # Demands: 'dummy' only
   demand dummy: false
   population: SSP2
+  gdp: SSP2
   # Emissions: ID of a dump from a base scenario
   emissions: "1"
 
