Move transport config keys from region-specific to base/default file
- fixed demand
- fixed gdp
- lambda
- work hours

--- a/message_ix_models/data/transport/config.yaml
+++ b/message_ix_models/data/transport/config.yaml
@@ -11,3 +11,14 @@ data source:
 
 # Set of modes handled by demand projection
 demand modes: [LDV, 2W, AIR, BUS, RAIL]
+
+# Fixed future point for total passenger demand
+# “Assume only half the speed (330 km/h) and not as steep a curve.”
+fixed demand: "337327.9893 km / year"  # = 149500 * 1.12818725502081 * 2
+fixed GDP: "300 kUSD / passenger / year"
+
+# Logit share exponents or cost distribution parameters [0]
+lambda: -2
+
+# Work hours per year, used to compute value of time
+work hours: "1600 hours / passenger / year"  # = 200 * 8
