--- a/message_ix_models/data/transport/config.yaml
+++ b/message_ix_models/data/transport/config.yaml
@@ -25,6 +25,19 @@ constraint:
 # groups specified in the corresponding technology.yaml file.
 demand modes: [LDV, 2W, AIR, BUS, RAIL]
 
+efficiency:
+  '*': 0.2
+  hev: 0.2
+  phev: 0.2
+  fcev: 0.2
+  # Similar to 'cost/bus inv' above, except for output efficiency.
+  bus output:
+    ICH_bus: 1.424  # ie. 47.6 / 33.42
+    PHEV_bus: 1.424
+    FC_bus: 1.563  # ie. 52.25 / 33.42
+    FCg_bus: 1.563
+    FCm_bus: 1.563
+
 # Fixed future point for total passenger demand
 # “Assume only half the speed (330 km/h) and not as steep a curve.”
 fixed demand: "337327.9893 km / year"  # = 149500 * 1.12818725502081 * 2
