Aggregate transport technologies by modes

--- a/message_ix_models/data/transport/report.yaml
+++ b/message_ix_models/data/transport/report.yaml
@@ -51,7 +51,8 @@ general:
   - _transport 2c::iamc
   - _transport 2d::iamc
   - _transport 3::iamc
-  - _transport 4::iamc
+  # Debugging
+  - _transport debug ACT::iamc
 
 - key: transport iamc file
   comp: write_report
@@ -61,9 +62,11 @@ general:
   comp: store_ts
   inputs: [ scenario, transport iamc ]
 
-iamc:
 # NB these are currently tailored to produce the variable names expected for the
 #    NGFS project
+iamc:
+
+# Stock
 - variable: _transport 0
   base: stock:nl-t-ya:ldv
   var: [ "Transport|Stock|Road|Passenger|LDV", t ]
@@ -72,21 +75,24 @@ iamc:
   base: in:nl-t-ya-c:ldv
   var: [ "Final Energy|Transportation|Road|Passenger|LDV", t, c ]
 
-# The following are 4 different partial sums of the full-resolution in::non-ldv
+# Final energy
+
+# The following are 4 different partial sums of in::transport, in which
+# individual technologies are already aggregated to modes
 - variable: _transport 2a
-  base: in:nl-t-ya-c:non-ldv
+  base: in:nl-t-ya-c:transport
   var: [ "Final Energy|Transportation", t, c ]
 
 - variable: _transport 2b
-  base: in:nl-ya-c:non-ldv
+  base: in:nl-ya-c:transport
   var: [ "Final Energy|Transportation", c ]
 
 - variable: _transport 2c
-  base: in:nl-t-ya:non-ldv
+  base: in:nl-t-ya:transport
   var: [ "Final Energy|Transportation", t ]
 
 - variable: _transport 2d
-  base: in:nl-ya:non-ldv
+  base: in:nl-ya:transport
   var: [ "Final Energy|Transportation" ]
 
 - variable: _transport 3
@@ -94,7 +100,7 @@ iamc:
   base: emi:nl-t-ya
   var: [ "Emissions|CO2|Energy|Demand|Transportation|", t ]
 
-# For debugging
-- variable: _transport 4
+# For debugging. "ZZZ" is needed because pyam.concat() sorts automatically
+- variable: _transport debug ACT
   base: ACT:nl-t-ya
-  var: [ "Internal|ACT:nl-t-ya", t ]
+  var: [ "ZZZ debug|ACT:nl-t-ya", t ]
