--- a/message_ix_models/data/transport/technology.yaml
+++ b/message_ix_models/data/transport/technology.yaml
@@ -294,6 +294,7 @@ LDV:
   by_consumer_group: true
   child: [ELC_100, HFC_ptrp, IAHe_ptrp, IAHm_ptrp, ICAe_ffv, ICAm_ptrp,
     ICE_conv, ICE_L_ptrp, ICE_nga, ICH_chyb, IGH_ghyb, PHEV_ptrp]
+  units: Gv km
 
 "transport {technology.id} load factor":
   _generate: {technology: LDV}
@@ -305,6 +306,7 @@ LDV:
   description: >-
     In MESSAGE-V, the output of these technologies was labelled: h-u
   child: [ICE_H_moto, ELE_moto]
+  units: Gv km
 
 freight truck:
   name: Freight trucks
@@ -312,6 +314,7 @@ freight truck:
     In MESSAGE-V, the output of all freight technologies was labelled: f-u
   child: [FR_ICE_H, FR_ICE_M, FR_ICE_L, FR_ICG, FR_ICAe, FR_ICH, FR_FCH,
     FR_FCg, FR_FCm]
+  units: Gv km
 
 AIR:
   name: Aviation
@@ -325,6 +328,7 @@ AIR:
 
     In MESSAGE-V, the output of these technologies was labelled: a-u
   child: [con_ar, conh_ar, conm_ar, conE_ar]
+  units: Gv km
 
 BUS:
   name: Urban public transit
@@ -340,6 +344,7 @@ BUS:
     In MESSAGE-V, the output of these technologies was labelled: u-u
   child: [ICE_H_bus, ICE_M_bus, ICG_bus, ICAe_bus, ICH_bus, FC_bus, FCg_bus,
          FCm_bus, Trolley_bus, PHEV_bus]
+  units: Gv km
 
 RAIL:
   name: Passenger rail
@@ -355,3 +360,4 @@ RAIL:
 
     In MESSAGE-V, the output of these technologies was labelled: i-u
   child: [crail_pub, dMspeed_rai, drail_pub, Hspeed_rai, Mspeed_rai, rail_pub]
+  units: Gv km
