--- a/message_ix_models/data/transport/R12/config.yaml
+++ b/message_ix_models/data/transport/R12/config.yaml
@@ -2,11 +2,13 @@
 
 # Sources for input data
 data source:
-  demand dummy: false
   gdp: SSP2
   population: SSP2
   LDV: US-TIMES MA3T
   non-LDV: IKARUS
+  # TODO support merging these with the base / non-region-specific file
+  demand dummy: false  # true to include
+  supply dummy: false  # true to include
 
 factor:
   activity:
